# opensam

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  test.sh
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: context.rs  lib.rs  loop_agent.rs  subagent.rs
crates/agent/src/tools/: filesystem.rs  message.rs  mod.rs  path_utils.rs  shell.rs  spawn.rs  web.rs
crates/agent/tests/: test_context_builder.rs  test_filesystem_tools.rs  test_message_tool.rs  test_path_expansion.rs  test_path_validation.rs  test_session_persistence.rs  test_shell_tool.rs  test_subagent_manager.rs  test_tool_registry.rs  test_web_tools.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/bus/tests/: bus_tests.rs  dispatcher_tests.rs  message_tests.rs  metadata_tests.rs
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs  telegram.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  paths.rs
crates/config/tests/: integration_test.rs  test_api_keys.rs  test_config.rs  test_errors.rs  test_init.rs  test_paths.rs
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: lib.rs
crates/heartbeat/tests/: heartbeat_tests.rs
crates/opensam/: Cargo.toml
crates/opensam/src/: commands.rs  main.rs
crates/opensam/tests/: test_cli_args.rs  test_commands.rs  test_e2e.rs
crates/opensam/tests/common/: mod.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  openrouter.rs
crates/provider/tests/: mock_provider_tests.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/session/tests/: integration_tests.rs
