[package]
name = "opensam-heartbeat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
