[package]
name = "opensam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A lightweight AI agent framework in Rust"

[[bin]]
name = "opensam"
path = "src/main.rs"

[dependencies]
opensam-config = { path = "../config" }
opensam-bus = { path = "../bus" }
opensam-provider = { path = "../provider" }
opensam-agent = { path = "../agent" }
opensam-session = { path = "../session" }
opensam-channels = { path = "../channels" }
opensam-cron = { path = "../cron" }
opensam-heartbeat = { path = "../heartbeat" }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
rpassword = "7.0"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = "3.0"
