[package]
name = "opensam-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
dirs = { workspace = true }
regex = { workspace = true }
opensam-provider = { path = "../provider" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
